Tue Oct 22 20:02:22 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcombo.c: When popping up the list without
	any selected items, hack the focus on the list to
	avoid triggering a bug in GtkList when clicking
	on focused-but-not-selected items (#86700,
	Zimler Attila, Matthias Clasen) and to keep
	GtkWindow from selecting the first item.

	* tests/testgtk.c (create_list): Make the initial
	setting of the selection mode correspond to the option
	menu.

Wed Oct 23 01:03:43 2002  Kristian Rietveld  <kris@gtk.org>

	Another feature to create truly ugly TreeViews!: style properties
	for the even/odd colors used for row hinting. (#71595, reported
	by Owen Taylor).

	* gtk/gtktreeview.c (gtk_tree_view_class_init): add even_row_color
	and odd_row_color style properties.

	* gtk/gtkstyle.c (get_darkened_gc): support darken_count == 0 case,
	(gtk_default_draw_flat_box): rework cell coloring code to support
	user-provided even/odd row colors.

Wed Oct 23 01:01:52 2002  Kristian Rietveld  <kris@gtk.org>

	Cache signal IDs to speed up signal emission. This is a good speedup
	because GtkTreeModel emits a big number of signals.

	* gtk/gtktreemodel.c (gtk_tree_model_base_init): save IDs returned
	by g_signal_new,
	(gtk_tree_model_row_changed): use g_signal_emit instead of
	g_signal_emit_by_name,
	(gtk_tree_model_row_inserted): ditto,
	(gtk_tree_model_row_has_child_toggled): ditto,
	(gtk_tree_model_row_deleted): ditto,
	(gtk_tree_model_rows_reordered): ditto.
	
Wed Oct 23 00:56:15 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeselection.c (model_changed): new function,
	(gtk_tree_selection_selected_foreach): monitor changes in the model,
	bail out if the model has been changed from the foreach func.
	(#50263, reported by Havoc Pennington).

	* gtk/gtktreeselection.c (_gtk_tree_selection_internal_select_node):
	free anchor if applicable (#94868, reported and testcase provided by
	Daniel Elstner).

2002-10-23  Matthias Clasen  <maclas@gmx.de>
