@@ -1,3 +1,8 @@
+Wed Oct 23 17:06:02 2002  Kristian Rietveld  <kris@gtk.org>
+
+	* gtk/gtktreemodel.c: s/NULL/0/ on the g_signal_emit lines to
+	fix up yesterdays commit (reported by Morten Welinder).
+
 Tue Oct 22 20:02:22 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkcombo.c: When popping up the list without
